[project]
name = "ebuttd"
version = "0.1.0"
description = "EBU-TT-D parsing and logic"
authors = [{ name = "Christer Sandberg", email = "chrsan@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ebuttd"]
